--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^2.27.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
